--- a/index.html
+++ b/index.html
@@ -1,12 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>imgur</title>
-</head>
-<body>
-    <h1>imgur</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="https://s.imgur.com/images/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link rel="stylesheet" href="./index.css" />
+    <title>Imgur: The magic of the Internet</title>
+  </head>
+  <body>
+    <navbar class="main">
+      <div class="textNav">Laugh, cry, learn. There’s never a dull moment.</div>
+      <div class="exploreTag">
+        <div class="exploreHead">
+          <b>EXPLORE TAGS</b>
+          <b>MORE TAGS +</b>
+        </div>
+        <div class="exploreElem" id="exploreElem"></div>
+      </div>
+    </navbar>
+    <div class="mainFirst">
+      <div class="left">
+        <div><img class="logo" src="Images/logo.svg" alt="" /></div>
+        <button>
+          <img
+            src="https://s.imgur.com/desktop-assets/desktop-assets/icon-new-post.13ab64f9f36ad8f25ae3544b350e2ae1.svg"
+            alt=""
+          />New post
+        </button>
+      </div>
+      <div class="middle">
+        <form action="">
+          <input
+            class="textInput"
+            type="text"
+            placeholder="Images, #tags, @users oh my!"
+            id="query"
+            oninput="throttleFunction()"
+          />
+
+          <button>
+            <span class="material-icons search">search</span>
+          </button>
+        </form>
+        <div class="searchSuggestion" id="searchSuggestion"></div>
+      </div>
+      <div class="right">
+        <button>Go Ad-Free</button>
+        <div class="rightFirst">
+          <img
+            src="https://s.imgur.com/desktop-assets/desktop-assets/gift.577aa9948a2b45b6f16f448db9200a08.svg"
+            alt=""
+          />
+          <img src="Images/leaderboard.svg" alt="" />
+          <img src="Images/comments.svg" alt="" />
+          <img src="Images/notification.svg" alt="" />
+        </div>
+        <div class="rightSecond">
+          <span>Abhishek Ranjan</span>
+          <span class="profile">AR</span>
+        </div>
+      </div>
+    </div>
+    <div class="root">
+      <div class="mainRoot">
+        <div class="feeds">
+          <div class="column" id="column1"></div>
+          <div class="column" id="column2"></div>
+          <div class="column" id="column3"></div>
+          <div class="column" id="column4"></div>
+        </div>
+      </div>
+    </div>
+    <div class="footerDiv">
+      <div class="flex">
+        <span>© 2021 Imgur, Inc</span>
+        <span>About</span>
+        <span>Emerald</span>
+        <span>Press</span>
+        <span>Blog</span>
+        <span>Privacy</span>
+        <span>CCPA</span>
+        <span>Advertise</span>
+        <span>Ad Choices</span>
+        <span>Rules</span>
+        <span>Help</span>
+        <span>...</span>
+        <span>Get the App</span>
+      </div>
+    </div>
+  </body>
 </html>
+
+<script src="./index.js"></script>
