--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <link rel="stylesheet" href="./index.css" />
-    <title>Imgur: The magic of the Internet</title>
+    <title>Imgur</title>
   </head>
   <body>
     <navbar class="main">
